# cbor-cli

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install-cbor-deb.sh  public.gpg
.cargo/: config
.github/workflows/: rust_build.yml
cbor/: Cargo.toml
cli/: Cargo.toml  README.md  test.cbor  test4.cbor
cli/examples/: test.sh
cli/src/: config.rs  files.rs  inspect.rs  lib.rs  main.rs  traits.rs
debian/: changelog  control
fixtures/: test.json  test.toml  test.yaml
src/: export.rs  files.rs  import.rs  lib.rs  traits.rs
