[package]
name = "cbor-cli"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
description = "A command line tool for encoding and decoding CBOR using the serde crate to do encoding and decoding from various file formats to and from CBOR."

[[bin]]
name = "cbor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.12", features = ["env", "derive"] }
colored = { version = "2.1.0" }
serde_cbor = { version = "0.11.2", features = ["std", "alloc", "tags"] }
serde_json = { version = "1.0.111", features = ["alloc", "preserve_order"] }
serde_yaml = "0.9.30"
toml = { version = "0.8.8", features = ["indexmap", "preserve_order"] }
